// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render tile empty tile 1`] = `null`;

exports[`render tile tile content 1`] = `
<div
  class="vxteaser-tile"
>
  <img
    fetchpriority="auto"
    loading="lazy"
    src="url0"
    style="position: absolute; width: 100%; height: 100%; object-fit: cover; top: 0px;"
  />
  <div
    class="vxteaser-tile__content"
    data-testid="tile-content"
  >
    <div
      class="vxteaser-tile__content__inner"
    />
  </div>
</div>
`;

exports[`render tile tile theme 1`] = `
<div
  class="vxteaser-tile -theme-white"
>
  <img
    fetchpriority="auto"
    loading="lazy"
    src="url0"
    style="position: absolute; width: 100%; height: 100%; object-fit: cover; top: 0px;"
  />
  <div
    class="vxteaser-tile__content"
    data-testid="tile-content"
  >
    <div
      class="vxteaser-tile__content__inner"
    />
  </div>
</div>
`;
